# mandelbrot_cpp

./: CMakeLists.txt  README.md  instructies en stappen voor cmake en dependencies installation cpp.txt  mandelbrot.cpp  mandelbrot_main.cpp  settings.yaml
colormaps/: twilight_colormap.csv
src/: mandelbrot.cpp  mandelbrot.hpp  mandelbrot_image.hpp  mandelbrot_trajectory.cpp  mandelbrot_trajectory.hpp  mandelbrot_video.cpp  mandelbrot_video.hpp  settings.cpp  settings.hpp  timer.hpp
